@@ -19,9 +19,9 @@
   <!--No "text"?--></lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>B</functionality>
-  <driver>cljet5</driver><!--verified--><!--no "contrib_url"-->
+  <functionality>A</functionality>
+  <driver>hpijs</driver><!--verified--><!--no "contrib_url"-->
   <comments>
-    <en>some colors are not printed correct</en>
+    <en></en>
   </comments>
 </printer>
