@@ -26,18 +26,19 @@
   </lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>D</functionality>
-  <driver>cljet5</driver>
+  <functionality>A</functionality>
+  <driver>hpijs</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
 
-    ...the model with no Postscript cartridge.&lt;p&gt;
+    ...the model with no PostScript cartridge.&lt;p&gt;
 
-    Works in B/W mode, needs explicit 600 dpi setting. Does not print
-    in color.&lt;p&gt;
+    Should work perfectly with HP&apos;s &quot;hpijs&quot;
+    driver.&lt;p&gt;
 
-    Someone should try the pxlcolor or cljet5 drivers.
+    Someone should try also the &quot;pxlcolor&quot; or
+    &quot;cljet5&quot; drivers.&lt;p&gt;
 
     </en>
   </comments>
