@@ -1,3 +1,8 @@
+2002-11-06  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/printer/*: Recommended driver "hpijs" and "Perfectly"
+	  for HP Color LaserJet 5 and 5000.
+
 2002-11-02  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/printer/*: Added the HP DeskJet 3425, 3810, 3816,
